S3 policy name fix (#35)
* Added profileName parameter to CreateBucket

* Added profileName to the call to CreateBucket i Balsam API

* With new tags for balsam-api and s3-provider

---------
